# Libra

./: .checkov.yaml  .dockerignore  .editorconfig  .eslintignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Makefile  Makefile.core  Makefile.web  README.md  docker-compose.yaml  package.json  pnpm-lock.yaml  rust-toolchain.toml  svelte.config.js  tailwind.config.js  vitest.config.e2e.ts
.devcontainer/: devcontainer.json  docker-compose.override.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml
core/app/: Cargo.toml  tauri.conf.json
core/app/src/: lib.rs
core/app/src/ipc/: greet.rs
core/cli/: Cargo.toml
core/cli/src/: main.rs
core/cli/src/cli/: app.rs  common.rs  mod.rs
core/entity/: Cargo.toml
core/entity/src/: resource.rs
core/migration/: Cargo.toml
core/service/: Cargo.toml
core/service/src/: lib.rs  mutation.rs  query.rs
core/service/tests/: mock.rs
e2e/: e2e.test.ts  setup.ts
src/: hooks.client.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/cli/: app.rs
src-tauri/src/ipc/: error.rs  greet.rs  message.rs  mod.rs  setting.rs
src-tauri/src/migration/: m20230917_080127_create_resource.rs  mod.rs
src-tauri/src/service/: mutation.rs  query.rs
src-tauri/tests/: prepare.rs
src/lib/: config.ts
src/lib/ipc/: greet.ts  index.ts  message.ts  setting.ts
src/routes/: +page.svelte
