[package]
name = "app"
version = "0.1.0"
edition = "2021"
authors = ["Yuchan Lee <lasuillard@gmail.com>"]
publish = false

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.1", features = [] }
opentelemetry = { version = "0.20.0", features = ["trace", "metrics", "logs", "rt-tokio"] }
log = "0.4.20"
regex = "1.9.5"
thiserror = "1.0.48"
anyhow = "1.0.75"
clap = { version = "4.4.3", features = ["derive", "env", "cargo"] }
const_format = "0.2.31"
opentelemetry-otlp = { version = "0.14.0", features = ["tonic", "trace", "metrics", "logs"] }
opentelemetry-appender-log = { version = "0.1.0", default-features = false }
opentelemetry_sdk = { version = "0.20.0", features = ["logs", "metrics", "trace"] }
simplelog = "0.12.1"
multi_log = "0.1.2"
opentelemetry-semantic-conventions = "0.12.0"
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["smallvec", "fmt", "ansi", "std"] }
tracing-opentelemetry = "0.21.0"
sea-orm = "0.12.2"
sea-orm-migration = { version = "0.12.0", features = [
  "runtime-tokio-rustls",
  "sqlx-sqlite",
] }
lazy_static = "1.4.0"

[features]
mock = ["sea-orm/mock"]

# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[[test]]
name = "mock"
required-features = ["mock"]
