[package]
name = "app"
version = "0.1.0"
edition = "2021"
authors = ["Yuchan Lee <lasuillard@gmail.com>"]
publish = false

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.1", features = [] }
service = { path = "../service" }
opentelemetry = { version = "0.20.0", features = ["trace", "metrics", "logs", "rt-tokio"] }
log = "0.4.20"
regex = "1.9.5"
thiserror = "1.0.48"
anyhow = "1.0.75"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
