[package]
name = "libra"
version = "0.1.0"
edition = "2021"
authors = ["Yuchan Lee <lasuillard@gmail.com>"]
publish = false

[dependencies]
app = { path = "../app" }
clap = { version = "4.4.3", features = ["derive", "env", "cargo"] }
const_format = "0.2.31"
log = "0.4.20"
tokio = "1.32.0"
anyhow = "1.0.75"
opentelemetry-otlp = { version = "0.13.0", features = ["tonic", "trace", "metrics", "logs"] }
opentelemetry-appender-log = { version = "0.1.0", default-features = false }
opentelemetry_sdk = { version = "0.20.0", features = ["logs", "metrics", "trace"] }
opentelemetry = { version = "0.20.0", features = ["logs", "metrics", "trace"] }
simplelog = "0.12.1"
multi_log = "0.1.2"
opentelemetry-semantic-conventions = "0.12.0"
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["smallvec", "fmt", "ansi", "std"] }
tracing-opentelemetry = "0.21.0"
