[package]
name = "service"
version = "0.1.0"
edition = "2021"
authors = ["Yuchan Lee <lasuillard@gmail.com>"]
publish = false

[dependencies]
entity = { path = "../entity" }
lazy_static = "1.4.0"
opentelemetry = { version = "0.20.0", features = ["trace", "metrics", "logs", "rt-tokio"] }
sea-orm = { version = "0.12.2", features = [
    "debug-print",
    "runtime-async-std-rustls",
    "sqlx-sqlite",
] }

[dev-dependencies]
tokio = { version = "1.20.0", features = ["macros", "rt"] }

[features]
mock = ["sea-orm/mock"]

[[test]]
name = "mock"
required-features = ["mock"]
